bug 120107 - calc max/max-elem sizes when requested during an unconstrained incremental reflow. sr=waterson, r=bernd.